# MultipliMachineStudy

./: .gitignore  .gitmodules  HELP2.DOC  MAKEDIST.BAT  MAKEHELP.BAT  README.md  appveyor.yml  asedit.pas  cons.pas  conv.inc  defl.pas  defl.res  flow.pas  flow.res  form.pas  form.res  helpids.h  hotkeys.rc  inst.pas  inst.res  install.pas  install.res  machstdy.gid  machstdy.hlp  machstdy.hpj  machstdy.pas  machstdy.res  machstdy.usr  probj.pas  probj.res  userinfo.pas  userinfo.res  validize.pas  ver.rc
doc/: README  help2.doc  helpex.doc  machstdy-generate.qhcp  machstdy.hpj  machstdy.qhcp  machstdy.rtf
doc/htmlhelp/: machstdy.chm  machstdy.hhk  machstdy.hhp
doc/htmlhelp/html/: mach008j.htm  mach0jlf.htm  mach0r5f.htm  mach0wc8.htm  mach15f8.htm  mach1i9g.htm  mach3igi.htm  mach5mb2.htm  mach6gv9.htm  mach8azx.htm  mach8ib2.htm
doc/qthelp/: machstdy.qch  machstdy.qhc
src/MachineStudy/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AreaFlowCalcDialog.cpp  AreaFlowCalcDialog.h  AreaFlowCalcDialog.ui  CMakeLists.txt  CustomerDialog.cpp  CustomerDialog.h  CustomerDialog.ui  FormConstDialog.cpp  FormConstDialog.h  FormConstDialog.ui  FormationCalcDialog.cpp  FormationCalcDialog.h  FormationCalcDialog.ui  GradeCalcDialog.cpp  GradeCalcDialog.h  GradeCalcDialog.ui  HeadBoxDilutionDialog.cpp  HeadBoxDilutionDialog.h  HeadBoxDilutionDialog.ui  HelpBrowser.cpp  HelpBrowser.h  HelpDialog.cpp  HelpDialog.h  HelpDialog.ui  KeyPressFilter.h  LICENSE  MachineStudy.iss  MachineStudy.qrc  MachineStudy.rc  MainWindow.cpp  MainWindow.h  MainWindow.ui  PipeFlowCalcDialog.cpp  PipeFlowCalcDialog.h  PipeFlowCalcDialog.ui  ProductionCalcDialog.cpp  ProductionCalcDialog.h  (+7 more)
